--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <p class="lead">A hourly calendar app for scheduling your work day</p>
     <i class="far fa-calendar-alt mt-4"></i>
     <p id="currentDay" class="lead mt-3"></p>
-    <!-- <p id="currentTime" class="lead"></p> -->
+    <p id="currentTime" class="lead"></p>
   </header>
   <div id="schedule" class="container mb-5">
     <!-- Timeblocks go here -->
